# storycraftr

./: .env.example  .gitignore  .papercraftr_checkpoint  .pre-commit-config.yaml  .storycraftr_checkpoint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  TESTS.md  TODO-API-Change.md  load_api_key.py  package-lock.json  package.json  promotional_post.md  pyproject.toml  release_notes.md  requirements.txt  test_llamaindex.py  tsconfig.json  webpack.config.ts
.github/workflows/: pre-commit.yml  pytest.yml
.husky/: pre-commit
docs/: CNAME  _config.yml  advanced.md  chat-modernization-plan.md  chat.md  getting_started.md  index.html  iterate.md  langchain-graph-plan.md  langchain-refactor-plan.md  pdf-generation-plan.md  robots.txt  sitemap.xml  subagents-plan.md
docs/_layouts/: doc.html
docs/reference/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/reference/.doctrees/: environment.pickle  index.doctree
docs/reference/_static/: alabaster.css  basic.css  doctools.js  documentation_options.js  language_data.js  searchtools.js
docs/source/: conf.py  index.rst  rag-evaluation.md
examples/: example_usage.md  example_usage.sh  papercraftr_example_usage.sh  storycraftr_example_usage.sh
src/: extension.ts  extension.ts.basic  package.json
storycraftr/: __init__.py  agents.py  chapters.py  cli.py  core.py  init.py  markdown.py  outline.py  retrieval.py  state.py  worldbuilding.py
storycraftr/agent/: agents.py  chapters.py  iterate.py  outline.py  retrieval.py  worldbuilding.py
storycraftr/agent/paper/: __init__.py  analyze.py  define.py  finalize.py  generate_bibliography.py  generate_pdf.py  generate_section.py  iterate.py  organize_lit.py  outline_sections.py  references.py
storycraftr/agent/story/: agents.py  chapters.py  iterate.py  outline.py  worldbuilding.py
storycraftr/chat/: __init__.py  commands.py  module_runner.py  render.py  session.py
storycraftr/cmd/: __init__.py  chapters.py  chat.py  iterate.py  measure.py  outline.py  publish.py  worldbuilding.py
storycraftr/cmd/paper/: __init__.py  abstract.py  analyze.py  define.py  finalize.py  generate_bibliography.py  generate_pdf.py  generate_section.py  iterate.py  organize_lit.py  outline_sections.py  publish.py  references.py
storycraftr/cmd/story/: __init__.py  chapters.py  iterate.py  (+3 more)
storycraftr/graph/: __init__.py  assistant_graph.py
storycraftr/integrations/: __init__.py  vscode.py
storycraftr/llamaindex/: README.md  __init__.py  agent_integration.py  chat_integration.py  cli.py  core.py
storycraftr/llm/: __init__.py  credentials.py  embeddings.py  factory.py
storycraftr/measure/: benchmarks.py  evaluate.py  golden.py  golden_scores.json
storycraftr/pdf/: __init__.py  renderer.py
storycraftr/prompts/: chapters.py  core.py  iterate.py  outline.py  permute.py  worldbuilding.py
storycraftr/rag/: document_processor.py  embeddings.py  models.py  vector_store.py
storycraftr/subagents/: __init__.py  defaults.py  jobs.py  models.py  storage.py
storycraftr/templates/: __init__.py  folder.py  folder_paper.py  ieee.tex  ieee_tex.py  paper_tex.py  tex.py
storycraftr/utils/: cleanup.py  core.py  markdown.py  pdf.py
storycraftr/vectorstores/: __init__.py  chroma.py
tests/: test_chapters.py  test_cli.py  test_markdown.py  test_outline.py  test_worldbuilding.py
tests/agent/: test_agents.py
tests/cmd/: test_chat.py
tests/rag/: test_document_processor.py  test_embeddings.py  test_evaluation.py  test_vector_store.py
tests/unit/: test_subagents.py  test_vscode_integration.py
vscode/: extension.ts  getNonce.ts  panel.ts
vscode/webview/: index.tsx
(+14 files in other folders)
