[tool.poetry]
name = "storycraftr"
version = "0.3.0"
description = "A CLI tool for writing books using OpenAI."
authors = ["Tu nombre <tuemail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "1.51.2"  # Especificando la versi贸n de OpenAI
click = "8.1"      # Especificando la versi贸n de Click
markdown = "3.7"   # Especificando la versi贸n de Markdown
pandoc = "2.4"     # Especificando la versi贸n de Pandoc
rich = "^13.9.2"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
storycraftr = "storycraftr.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
ipdb = "^0.13.13"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
line-length = 88
target-version = ['py39']
