[tool.poetry]
name = "storycraftr"
version = "0.10.1-beta4"
description = "A CLI tool for writing books and research papers using OpenAI."
authors = ["Rodrigo Estrada <rodrigo.estrada@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.51.2"
click = ">=8.1"
markdown = ">=3.7"
pandoc = ">=2.4"
rich = ">=13.9.2"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.2"
requests = ">=2.32.3"
prompt-toolkit = ">=3.0.48"
chromadb = "^1.0"
sentence-transformers = "^5.1"
pypdf = "^6.0"
unstructured = "^0.18"
onnxruntime = "^1.18.1"
ragas = "^0.1.9"
torch = {version = "^2.8.0", source = "pytorch_cpu"}

[tool.poetry.scripts]
storycraftr = "storycraftr.cli:cli"
papercraftr = "storycraftr.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.4"
ipdb = ">=0.13.13"
black = ">=24.10.0"
pre-commit = ">=4.0.1"
sphinx = ">=8.1.3"
sphinx-click = ">=6.0.0"
datasets = "^2.20.0"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ["py39"]
